# librope

./: .gitignore  LICENSE  README.md  pyproject.toml  pyrope.c  requirements.txt  setup.py  test.py
pyrope.egg-info/: PKG-INFO  SOURCES.txt
